Changelog
=========

0.10.2 -
-------------------

- Documentation for development & debugging.
  [ggozad]

0.10.1 - 2025-04-09
-------------------

- More stability handling MCP servers.
  [ggozad]
- Add pre-commit hooks and fix linting errors.
  [ggozad]
- Add "think" tool allowing models to think before responding.
  [ggozad]
- Remove tools that are not that useful.
  [ggozad]

0.10.0 - 2025-04-02
-------------------

- Add sixel support for images.
  [ggozad]

- Enable scrolling with keys within a chat.
  [ggozad]

0.9.5 - 2025-03-25
------------------

- When creating a command, pin the current version of oterm as a dependency.
  [ggozad]

0.9.4 - 2025-03-25
------------------

- Support for MCP prompts.
  [ggozad]


0.9.3 - 2025-03-25
------------------

- Include the default environment when running an mcp server with custom env.
  [ggozad]

0.9.2 - 2025-03-25
------------------

- Override default Ollama Options() to allow for single string as a stop word.
  [ggozad]

- Enable '-h' short-form help option.
  [brucewillke]

- Fix checking latest version on pypi.
  [ggozad]

0.9.1 - 2025-03-25
------------------
- Check with pypi if oterm is up to date.
  [ggozad]

- CLI command creation.
  [ggozad]

- Remove pyperclip dependency.
  [ggozad]

- Documentation site.
  [ggozad]

0.8.4 - 2025-02-23
------------------
- Keep MCP sessions alive while oterm is running. Fix running multiple MCP tools.
  [sheffler, ggozad]

0.8.3 - 2025-02-06
------------------
- Do not save the chat when a model is selected when creating a new chat.
  [ggozad]

- Replace custom Notification() with textual's built-in notification.
  [ggozad]

- Dependency updates.
  [ggozad]

- Improve visibility of labels in the modals.
  [ggozad]

0.8.2 - 2025-02-03
------------------

- Fix merging chat and additional options properly.
  [ggozad]

0.8.1 - 2025-01-29
------------------

- Support for thinking models (e.g. DeepSeek R1).
  [liorm]

0.8.0 - 2025-01-19
------------------
