@@ -4,6 +4,9 @@ Changelog
 0.10.2 -
 -------------------
 
+- Faster boot by performing version & ollama checks in parallel.
+  [ggozad]
+
 - Documentation for development & debugging.
   [ggozad]
 
